# flux-generated

./: .dockerignore  .env.exemplo  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/generated-runtime/: Cargo.toml
crates/generated-runtime/src/: lib.rs
crates/schema-reflector/: Cargo.toml
crates/schema-reflector/src/: aggregate.rs  aggregate_code.rs  api.rs  api_template.rs  codegen.rs  error.rs  introspect.rs  lib.rs  model.rs
deploy/: .env.exemplo  Dockerfile  Dockerfile.deploy  deploy-entrypoint.sh  docker-compose.deploy.yml  docker-compose.yml
src/: main.rs
